[gd_scene load_steps=4 format=3 uid="uid://replay_screen_v1"]

[ext_resource type="Script" path="res://scripts/ui/screens/Replay.gd" id="1_replay_script"]
[ext_resource type="Script" path="res://scripts/ui/components/TimelineCanvas.gd" id="2_timeline_script"]

[node name="Replay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_replay_script")

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ControlsLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="ControlsLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsLayer/PanelContainer"]
layout_mode = 2

[node name="TimelineCanvas" type="Control" parent="ControlsLayer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
script = ExtResource("2_timeline_script")

[node name="ButtonRow" type="HBoxContainer" parent="ControlsLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevBtn" type="Button" parent="ControlsLayer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Prev"

[node name="PlayPauseBtn" type="Button" parent="ControlsLayer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Play"

[node name="NextBtn" type="Button" parent="ControlsLayer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Next"

[node name="SpeedToggle" type="Button" parent="ControlsLayer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
text = "1x"

[node name="FilterToggle" type="Button" parent="ControlsLayer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Events: All"
